@@ -121,6 +121,7 @@ using namespace std;
 
 #ifdef BUILDING_ON_TIGER
 typedef unsigned NSUInteger;
+#define NSAccessibilityValueDescriptionAttribute @"AXValueDescription"
 #endif
 
 @interface NSObject (WebKitAccessibilityArrayCategory)
